@@ -3,6 +3,8 @@ package org.xliu.cs.algs_ds.algs.recursive;
 import org.junit.jupiter.api.Test;
 import org.xliu.cs.algs_ds.algs.recursive.RecursiveToFor;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
@@ -13,14 +15,15 @@ class RecursiveToForTest {
     @Test
     public void testRecursive() {
         List<String> orders = RecursiveToFor.hanio(1, 'A', 'B', 'C');
-        assertIterableEquals(List.of("A-C"), orders);
+        assertIterableEquals(Collections.singletonList("A-C"), orders);
+
 
         orders = RecursiveToFor.hanio(2, 'A', 'B', 'C');
-        assertIterableEquals(List.of("A-B", "A-C", "B-C"), orders);
+        assertIterableEquals(Arrays.asList("A-B", "A-C", "B-C"), orders);
 
 
         orders = RecursiveToFor.hanio(3, 'A', 'B', 'C');
-        assertIterableEquals(List.of("A-C", "A-B", "C-B", "A-C", "B-A", "B-C", "A-C"), orders);
+        assertIterableEquals(Arrays.asList("A-C", "A-B", "C-B", "A-C", "B-A", "B-C", "A-C"), orders);
     }
 
     @Test
